[package]
name = "ironfs"
version = "0.1.0"
authors = ["Brandon Edens <brandonedens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerocopy = "0.5.0"
fuser = "0.8.0"
structopt = "0.3.22"
log = "0.4.14"
env_logger = "0.9.0"
libc = "0.2.98"
crc = "2.0.0"
