[package]
name = "ironfs"
version = "0.1.0"
authors = ["Brandon Edens <brandonedens@gmail.com>"]
edition = "2018"

[dependencies]
zerocopy = "0.5.0"
log = "0.4.14"
crc = "2.0.0"

[dev-dependencies]
fuser = "0.8.0"
structopt = "0.3.22"
env_logger = "0.9.0"
libc = "0.2.98"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
